example/echo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-staging"
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   tls:
#   - hosts:
#     - echo1.ayomide.shop
#     # - echo2.example.com
#     secretName: echo-tls
spec:
  rules:
  - host: echo1.ayomide.shop
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: echo1
              port:
                number: 80
  # - host: echo2.example.com
  #   http:
  #       paths:
  #       - pathType: Prefix
  #         path: "/"
  #         backend:
  #           service:
  #             name: echo2
  #             port:
  #               number: 80

#   apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: echo-ingress
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-staging"
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   tls:
#   - hosts:
#     - echo1.example.com
#     - echo2.example.com
#     secretName: echo-tls
#   rules:
#     - host: echo1.example.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: "/"
#             backend:
#               service:
#                 name: echo1
#                 port:
#                   number: 80
#     - host: echo2.example.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: "/"
#             backend:
#               service:
#                 name: echo2
#                 port:
#                   number: 80
