example/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.ayomide.shop
  labels:
    app: nginx
spec:
  ports:
  - name: http
    port: 80
  #   protocol: TCP
  #   targetPort: 80
  # selector:
  #   app: nginx
  # type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  labels:
    app: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.ayomide.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
  - hosts:
    - nginx.ayomide.shop
    secretName: ayomide-shop-tls

# XtdCNN4qDNYLbw.atlasv1.cnwcAeynCYgtzSwur9KBzK9BpadSyoTS8BQTeS55iBUjeKEL3CJNSgLir6dU2RLwKMg
